metadata1/unpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ATI_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ATI Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name2__c</fullName>
        <formula>Account.Name</formula>
        <label>Account Name2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Used in New Job Inquiry visual flow</description>
        <formula>IF(  ISBLANK( Account.Name )  ,  Account.FirstName  &amp;&quot; &quot;&amp;   Account.LastName &amp; &quot;, &quot; &amp; Account.BillingStreet   &amp; &quot;, &quot; &amp; Account.BillingCity &amp; &quot;, &quot;&amp;Account.BillingState &amp; &quot;, &quot; &amp; Phone &amp; &quot;, &quot; &amp; MobilePhone,  Account.Name &amp; &apos;-&apos;  &amp; BR() &amp; Account.BillingStreet  &amp; &quot;, &quot; &amp;  Account.BillingCity &amp; &quot;, &quot;&amp;Account.BillingState &amp; &quot;, &quot; &amp; Phone &amp; &quot;, &quot; &amp; MobilePhone )</formula>
        <label>Account Name (formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccruedUnApprovedExpenseTotal__c</fullName>
        <description>Concur custom field</description>
        <label>Accruing/Unpaid Expense Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjuster_Type__c</fullName>
        <description>dependent field from Contact type - adjuster. Displays types of adjuster.</description>
        <label>Adjuster Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contact_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Field adjuster</fullName>
                </value>
                <value>
                    <fullName>Inside Adjuster</fullName>
                </value>
                <value>
                    <fullName>Independent Adjuster</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CKSW_BASE__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CKSW_BASE__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Job_Status__c</fullName>
        <label>Contact Job Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Evaluating Job</fullName>
                </value>
                <value>
                    <fullName>Job In Progress</fullName>
                </value>
                <value>
                    <fullName>Job Completed in Last 30 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Ownership_Requester__c</fullName>
        <description>Contact Ownership Requester</description>
        <label>Contact Ownership Requester</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the ATI employee who made the request to add this contact</description>
        <inlineHelpText>Select the ATI employee who made the request to add this contact</inlineHelpText>
        <label>Contact Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Contact</fullName>
                </value>
                <value>
                    <fullName>Adjuster</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>General Contractor</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Home Builder</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Lawyer</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Municipality/ Gov&apos;t</fullName>
                </value>
                <value>
                    <fullName>Project Site Contact</fullName>
                </value>
                <value>
                    <fullName>Property Manager</fullName>
                </value>
                <value>
                    <fullName>Property Owner</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Religious</fullName>
                </value>
                <value>
                    <fullName>Sub-Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_and_Account_Name2__c</fullName>
        <formula>FirstName+&quot; &quot;+LastName+&quot;-&quot;+ Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact and Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_and_Account_Name__c</fullName>
        <formula>FirstName + &quot; &quot; + LastName +&quot; - &quot;+  Account.Name +&quot; - &quot;+  Account.Account_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact and Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to report on user usage of Cirrus Insight</description>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Catastrophe</fullName>
                </value>
                <value>
                    <fullName>Asbestos</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Bio</fullName>
                </value>
                <value>
                    <fullName>E.S.</fullName>
                </value>
                <value>
                    <fullName>Contents</fullName>
                </value>
                <value>
                    <fullName>Microbial</fullName>
                </value>
                <value>
                    <fullName>Structure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Opt_Out_Date__c</fullName>
        <label>Email Opt Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinalExpenseTotal__c</fullName>
        <description>Concur custom field</description>
        <label>Final/Paid Expense Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <formula>Id</formula>
        <label>ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implied_Interest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Implied Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incurred_Expenses__c</fullName>
        <inlineHelpText>Total Incurred Expenses</inlineHelpText>
        <label>Incurred Expenses</label>
        <summarizedField>Expenses__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Expenses__c.Current_YTD_Expense__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Expenses__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Inquiry_Type__c</fullName>
        <label>Inquiry Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsLiveChat__c</fullName>
        <label>IsLiveChat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Revenue_Last_Year__c</fullName>
        <description>Job revenue related to this contact last year</description>
        <label>Job Revenue Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the contact</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Most_Recent__c</fullName>
        <label>Lead Source Most Recent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open - Not Contacted</fullName>
                    <default>true</default>
                    <label>Open - Not Contacted</label>
                </value>
                <value>
                    <fullName>Working - Contacted</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>Recycled</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>MQL</fullName>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                    <isActive>false</isActive>
                    <label>Qualified</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leave_Us_A_Message__c</fullName>
        <label>Leave Us A Message</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location_of_Interest__c</fullName>
        <label>Location of Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Flagstaff</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>OC</fullName>
                </value>
                <value>
                    <fullName>Philadelphia</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Riverside</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>San Diego</fullName>
                </value>
                <value>
                    <fullName>San Jose</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>SF</fullName>
                </value>
                <value>
                    <fullName>Sonoma</fullName>
                </value>
                <value>
                    <fullName>Tampa</fullName>
                </value>
                <value>
                    <fullName>Tucson</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lunch_and_Learn_Status__c</fullName>
        <description>Status used for Lunch and Learn Approval Process</description>
        <label>Lunch and Learn Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unapproved</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lunch_and_Learn_Submitter_Email__c</fullName>
        <description>Email address populated via process builder of the user that is assigned to an activity with the Type of Lunch and Learn used in Lunch and Learn approval process.</description>
        <label>Lunch and Learn Submitter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MQL_date__c</fullName>
        <label>MQL date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mailing_County__c</fullName>
        <label>Mailing County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Jobs_Last_Year__c</fullName>
        <description>Count of number of jobs created last year related to this contact.  Populated via code.</description>
        <label>Number of Jobs Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Flagstaff</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>New England</fullName>
                </value>
                <value>
                    <fullName>Anaheim</fullName>
                </value>
                <value>
                    <fullName>Philadelphia</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Pittsburgh</fullName>
                </value>
                <value>
                    <fullName>Riverside</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>San Diego</fullName>
                </value>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>San Jose</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Tuscon</fullName>
                </value>
                <value>
                    <fullName>Tampa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ownership_Request_Status__c</fullName>
        <description>Field set by Contact Ownership request approval process</description>
        <label>Ownership Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unapproved</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ownership_Request_Submitter_Email__c</fullName>
        <description>Email address of AE who submitted the Ownership request.  Used in approval/rejection email alerts in the approval process</description>
        <label>Ownership Request Submitter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ownership_Request_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who submitted the ownership request approval</description>
        <label>Ownership Request Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ownership_Requester_ID__c</fullName>
        <description>Id of Ownership Requester</description>
        <label>Ownership Requester ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Billing_Street__c</fullName>
        <formula>Account.BillingStreet</formula>
        <label>Person Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Ext__c</fullName>
        <label>Phone Ext.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Regional_Location__c</fullName>
        <label>Regional Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQL_date__c</fullName>
        <label>SQL date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Needed_Location__c</fullName>
        <label>Service Needed (Location)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fire and Smoke Damage</fullName>
                </value>
                <value>
                    <fullName>Water Damage</fullName>
                </value>
                <value>
                    <fullName>Mold Remediation</fullName>
                </value>
                <value>
                    <fullName>Asbestos Abatement</fullName>
                </value>
                <value>
                    <fullName>Emergency Response</fullName>
                </value>
                <value>
                    <fullName>Reconstruction Services</fullName>
                </value>
                <value>
                    <fullName>Catastrophe Response</fullName>
                </value>
                <value>
                    <fullName>Restoration and Cleaning</fullName>
                </value>
                <value>
                    <fullName>Contents Cleaning</fullName>
                </value>
                <value>
                    <fullName>Biohazard Decontamination</fullName>
                </value>
                <value>
                    <fullName>Demolitions Services</fullName>
                </value>
                <value>
                    <fullName>Consulting Services</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Group__c</fullName>
        <formula>Account.Tax_Group__c</formula>
        <inlineHelpText>Contact Customer Tax Group</inlineHelpText>
        <label>Tax Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timberline_Customer_Number__c</fullName>
        <formula>Account.Timberline_Customer_Number__c</formula>
        <inlineHelpText>Customer Contact&apos;s Timberline Customer Number</inlineHelpText>
        <label>Timberline Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Marketing_Notes__c</fullName>
        <description>Total number of marketing notes on this contact</description>
        <label>Total Number of Marketing Notes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vetted_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer has been vetted by ATI to be a reference.</description>
        <inlineHelpText>Customer has been vetted by ATI to be a reference.</inlineHelpText>
        <label>Vetted Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X18DigitID__c</fullName>
        <description>Only used for Reporting purposes</description>
        <formula>CASESAFEID( Id )</formula>
        <inlineHelpText>This will return 18 digit ID instead of 15</inlineHelpText>
        <label>18DigitID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Calculated_Job_Function__c</fullName>
        <label>ZI Calculated Job Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Calculated_Management_Level__c</fullName>
        <label>ZI Calculated Management Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_City__c</fullName>
        <label>ZI City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Company_City__c</fullName>
        <label>ZI Company City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Country__c</fullName>
        <label>ZI Company Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Description__c</fullName>
        <label>ZI Company Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Employees__c</fullName>
        <label>ZI Company Employees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Fax__c</fullName>
        <label>ZI Company Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Name__c</fullName>
        <label>ZI Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Phone__c</fullName>
        <label>ZI Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Profile_URL__c</fullName>
        <label>ZI Company Profile URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Ranking__c</fullName>
        <label>ZI Company Ranking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Company_State__c</fullName>
        <label>ZI Company State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Street__c</fullName>
        <label>ZI Company Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Website__c</fullName>
        <label>ZI Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Zip__c</fullName>
        <label>ZI Company Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Company_is_Defunct__c</fullName>
        <label>ZI Company is Defunct</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Country__c</fullName>
        <label>ZI Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Direct_Phone__c</fullName>
        <label>ZI Direct Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ZI_Education__c</fullName>
        <label>ZI Education</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZI_Email_Matches_Company_Name__c</fullName>
        <label>ZI Email Matches Company Name?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Email_Matches_Person_Name__c</fullName>
        <label>ZI Email Matches Person Name?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Employee_Range__c</fullName>
        <label>ZI Employee Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Employment_History__c</fullName>
        <label>ZI Employment History</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZI_First_Name__c</fullName>
        <label>ZI First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Full_Name__c</fullName>
        <label>ZI Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Gender__c</fullName>
        <label>ZI Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Industry__c</fullName>
        <label>ZI Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Is_Free_Email__c</fullName>
        <label>ZI Is Free Email?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Is_Generic_Email__c</fullName>
        <label>ZI Is Generic Email?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Is_Known_First_Name__c</fullName>
        <label>ZI Is Known First Name?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Is_Known_Full_Name__c</fullName>
        <label>ZI Is Known Full Name?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Is_Known_Last_Name__c</fullName>
        <label>ZI Is Known Last Name?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Is_Malformed_Email__c</fullName>
        <label>ZI Is Malformed Email?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Job_Function__c</fullName>
        <label>ZI Job Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Last_Name__c</fullName>
        <label>ZI Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Last_Verified_Date__c</fullName>
        <label>ZI Last Verified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ZI_Management_Level__c</fullName>
        <label>ZI Management Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_NAICS_Codes__c</fullName>
        <label>ZI NAICS Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Normalized_First_Name__c</fullName>
        <label>ZI Normalized First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Normalized_Last_Name__c</fullName>
        <label>ZI Normalized Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Parent_Company_ID__c</fullName>
        <label>ZI Parent Company ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Parent_Company_Name__c</fullName>
        <label>ZI Parent Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Person_Image_URL__c</fullName>
        <label>ZI Person Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ZI_Person_Looks_like_EU__c</fullName>
        <label>ZI Person Looks like EU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Person_Profile_URL__c</fullName>
        <label>ZI Person Profile URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ZI_Person_Within_EU__c</fullName>
        <label>ZI Person Within EU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Revenue_Range__c</fullName>
        <label>ZI Revenue Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Revenue__c</fullName>
        <label>ZI Revenue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_SIC_Codes__c</fullName>
        <label>ZI SIC Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_State__c</fullName>
        <label>ZI State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Street__c</fullName>
        <label>ZI Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Ticker_Symbol__c</fullName>
        <label>ZI Ticker Symbol</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Title__c</fullName>
        <label>ZI Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Ultimate_Parent_Company_ID__c</fullName>
        <label>ZI Ultimate Parent Company ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Ultimate_Parent_Company_Name__c</fullName>
        <label>ZI Ultimate Parent Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>